Form panel horizontal scrollbar problem on small screen, caused by the large icon font size, solved

--- a/_sass/form-panel.scss
+++ b/_sass/form-panel.scss
@@ -8,6 +8,7 @@
         inset: 0; 
         font-family: var( --icon-font-family ); font-size: 40em; 
         background-color: rgba( var( --color-grayscale-dark-rgb ), 0.1 ); color: rgba( var( --color-grayscale-dark-rgb ), 0.4 ); 
+        overflow: hidden; 
     }
 
     .user-action-panel-main { 
